@@ -1,5 +1,5 @@
 /*
- * Copyright 2012 PrimeFaces Extensions.
+ * Copyright 2011-2012 PrimeFaces Extensions.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,7 @@
  *
  * $Id$
  */
+
 package org.primefaces.extensions.component.inputnumber;
 
 import java.io.IOException;
@@ -22,13 +23,14 @@ import java.math.RoundingMode;
 import java.text.DecimalFormat;
 import java.text.NumberFormat;
 import java.util.logging.Logger;
+
 import javax.faces.component.UIComponent;
 import javax.faces.context.FacesContext;
 import javax.faces.context.ResponseWriter;
 import javax.faces.convert.Converter;
 import javax.faces.convert.ConverterException;
+
 import org.primefaces.component.inputtext.InputText;
-import org.primefaces.extensions.component.dynaform.DynaFormRenderer;
 import org.primefaces.renderkit.InputRenderer;
 import org.primefaces.util.ComponentUtils;
 import org.primefaces.util.HTML;
@@ -42,212 +44,212 @@ import org.primefaces.util.HTML;
  */
 public class InputNumberRenderer extends InputRenderer {
 
-    private static final Logger LOGGER = Logger.getLogger(InputNumberRenderer.class.getName());
+	private static final Logger LOGGER = Logger.getLogger(InputNumberRenderer.class.getName());
 
-    @Override
-    public Object getConvertedValue(final FacesContext context, final UIComponent component, final Object submittedValue)
-            throws ConverterException {
+	@Override
+	public Object getConvertedValue(final FacesContext context, final UIComponent component, final Object submittedValue)
+			throws ConverterException {
 
-        InputNumber inputNumber = (InputNumber) component;
-        Converter converter = inputNumber.getConverter();
-        String submittedValueString = (String) submittedValue;
+		InputNumber inputNumber = (InputNumber) component;
+		Converter converter = inputNumber.getConverter();
+		String submittedValueString = (String) submittedValue;
 
-        if (converter != null) {
-            Object doubleConverted = converter.getAsObject(context, inputNumber, submittedValueString);
-            return doubleConverted;
-        } else {
-            if (submittedValueString != null && !submittedValueString.isEmpty()) {
-                return Double.valueOf(submittedValueString);
-            }
-            return new Double(0);
-        }
-    }
+		if (converter != null) {
+			Object doubleConverted = converter.getAsObject(context, inputNumber, submittedValueString);
+			return doubleConverted;
+		} else {
+			if (submittedValueString != null && !submittedValueString.isEmpty()) {
+				return Double.valueOf(submittedValueString);
+			}
+			return new Double(0);
+		}
+	}
 
-    @Override
-    public void decode(final FacesContext context, final UIComponent component) {
-        InputNumber inputNumber = (InputNumber) component;
+	@Override
+	public void decode(final FacesContext context, final UIComponent component) {
+		InputNumber inputNumber = (InputNumber) component;
 
-        if (inputNumber.isDisabled() || inputNumber.isReadonly()) {
-            return;
-        }
+		if (inputNumber.isDisabled() || inputNumber.isReadonly()) {
+			return;
+		}
 
-        decodeBehaviors(context, inputNumber);
+		decodeBehaviors(context, inputNumber);
 
-        String inputId = inputNumber.getClientId(context) + "_input";
-        String submittedValue = context.getExternalContext().getRequestParameterMap().get(inputId);
+		String inputId = inputNumber.getClientId(context) + "_input";
+		String submittedValue = context.getExternalContext().getRequestParameterMap().get(inputId);
 
-        if (submittedValue != null) {
-            inputNumber.setSubmittedValue(submittedValue);
-        }
+		if (submittedValue != null) {
+			inputNumber.setSubmittedValue(submittedValue);
+		}
 
-    }
+	}
 
-    @Override
-    public void encodeEnd(final FacesContext context, final UIComponent component) throws IOException {
-        InputNumber inputNumber = (InputNumber) component;
-        encodeMarkup(context, inputNumber);
-        encodeScript(context, inputNumber);
-    }
+	@Override
+	public void encodeEnd(final FacesContext context, final UIComponent component) throws IOException {
+		InputNumber inputNumber = (InputNumber) component;
+		encodeMarkup(context, inputNumber);
+		encodeScript(context, inputNumber);
+	}
 
-    protected void encodeMarkup(final FacesContext context, final InputNumber inputNumber) throws IOException {
-        ResponseWriter writer = context.getResponseWriter();
-        String clientId = inputNumber.getClientId(context);
-        boolean disabled = inputNumber.isDisabled();
+	protected void encodeMarkup(final FacesContext context, final InputNumber inputNumber) throws IOException {
+		ResponseWriter writer = context.getResponseWriter();
+		String clientId = inputNumber.getClientId(context);
+		boolean disabled = inputNumber.isDisabled();
 
-        String styleClass = inputNumber.getStyleClass();
-        styleClass = styleClass == null ? InputNumber.INPUTNUMBER_CLASS : InputNumber.INPUTNUMBER_CLASS + " " + styleClass;
+		String styleClass = inputNumber.getStyleClass();
+		styleClass = styleClass == null ? InputNumber.INPUTNUMBER_CLASS : InputNumber.INPUTNUMBER_CLASS + " " + styleClass;
 
-        writer.startElement("div", inputNumber);
-        writer.writeAttribute("class", styleClass, "styleClass");
+		writer.startElement("div", inputNumber);
+		writer.writeAttribute("class", styleClass, "styleClass");
 
-        encodeInput(context, inputNumber, clientId, disabled);
-        encodeOutput(context, inputNumber, clientId, disabled);
+		encodeInput(context, inputNumber, clientId, disabled);
+		encodeOutput(context, inputNumber, clientId, disabled);
 
-        writer.endElement("div");
-    }
+		writer.endElement("div");
+	}
 
-    protected void encodeInput(final FacesContext context, final InputNumber inputNumber, final String clientId, final boolean disabled) throws IOException {
-        ResponseWriter writer = context.getResponseWriter();
-        String inputId = clientId + "_input";
+	protected void encodeInput(final FacesContext context, final InputNumber inputNumber, final String clientId, final boolean disabled) throws IOException {
+		ResponseWriter writer = context.getResponseWriter();
+		String inputId = clientId + "_input";
 
-        writer.startElement("div", inputNumber);
-        writer.writeAttribute("class", InputNumber.INPUTNUMBER_INPUT_WRAPPER_CLASS, null);
+		writer.startElement("div", inputNumber);
+		writer.writeAttribute("class", InputNumber.INPUTNUMBER_INPUT_WRAPPER_CLASS, null);
 
-        writer.startElement("input", null);
-        writer.writeAttribute("id", inputId, "id");
-        writer.writeAttribute("name", inputId, null);
+		writer.startElement("input", null);
+		writer.writeAttribute("id", inputId, "id");
+		writer.writeAttribute("name", inputId, null);
 
-        if (disabled) {
-            writer.writeAttribute("disabled", "disabled", null);
-        }
+		if (disabled) {
+			writer.writeAttribute("disabled", "disabled", null);
+		}
 
-        if (inputNumber.getOnchange() != null) {
-            writer.writeAttribute("onchange", inputNumber.getOnchange(), null);
-        }
+		if (inputNumber.getOnchange() != null) {
+			writer.writeAttribute("onchange", inputNumber.getOnchange(), null);
+		}
 
-        writer.endElement("input");
-        writer.endElement("div");
-    }
+		writer.endElement("input");
+		writer.endElement("div");
+	}
 
-    protected void encodeOutput(final FacesContext context, final InputNumber inputNumber, final String clientId, final boolean disabled) throws IOException {
+	protected void encodeOutput(final FacesContext context, final InputNumber inputNumber, final String clientId, final boolean disabled) throws IOException {
 
-        ResponseWriter writer = context.getResponseWriter();
+		ResponseWriter writer = context.getResponseWriter();
 
-        String defaultClass = InputText.STYLE_CLASS;
-        defaultClass = !inputNumber.isValid() ? defaultClass + " ui-state-error" : defaultClass;
-        defaultClass = inputNumber.isDisabled() ? defaultClass + " ui-state-disabled" : defaultClass;
-
-
-        writer.startElement("input", null);
-        writer.writeAttribute("id", clientId, null);
-        writer.writeAttribute("name", clientId, null);
-        writer.writeAttribute("type", "text", null);
+		String defaultClass = InputText.STYLE_CLASS;
+		defaultClass = !inputNumber.isValid() ? defaultClass + " ui-state-error" : defaultClass;
+		defaultClass = inputNumber.isDisabled() ? defaultClass + " ui-state-disabled" : defaultClass;
 
 
-        renderPassThruAttributes(context, inputNumber, HTML.INPUT_TEXT_ATTRS);
-
-        if (inputNumber.isDisabled()) {
-            writer.writeAttribute("disabled", "disabled", "disabled");
-        }
-        if (inputNumber.isReadonly()) {
-            writer.writeAttribute("readonly", "readonly", "readonly");
-        }
-        if (inputNumber.getStyle() != null) {
-            writer.writeAttribute("style", inputNumber.getStyle(), "style");
-        }
-
-        writer.writeAttribute("class", defaultClass, "");
-
-        writer.endElement("input");
-    }
-
-    protected void encodeScript(final FacesContext context, final InputNumber inputNumber) throws IOException {
-        ResponseWriter writer = context.getResponseWriter();
-        String clientId = inputNumber.getClientId(context);
-        startScript(writer, clientId);
-        String valueToRender = ComponentUtils.getValueToRender(context, inputNumber);
-        if (valueToRender == null) {
-            valueToRender = "";
-        }
-
-        writer.write("$(function() {");
-        writer.write("PrimeFacesExt.cw('InputNumber','" + inputNumber.resolveWidgetVar() + "',{");
-        writer.write("id:'" + clientId + "'");
-        writer.write(",valueToRender:'" + formatForPlugin(valueToRender) + "'");
-
-        String metaOptions = getOptions(inputNumber);
-        if (!metaOptions.isEmpty()) {
-            writer.write(",pluginOptions:" + metaOptions);
-        }
-        encodeClientBehaviors(context, inputNumber);
-        writer.write("});});");
-
-        endScript(writer);
-    }
-
-    private String getOptions(final InputNumber inputNumber) {
-
-        String decimalSeparator = inputNumber.getDecimalSeparator();
-        String thousandSeparator = inputNumber.getThousandSeparator();
-        String symbol = inputNumber.getSymbol();
-        String symbolPosition = inputNumber.getSymbolPosition();
-        String minValue = inputNumber.getMinValue();
-        String maxValue = inputNumber.getMaxValue();
-        String roundMethod = inputNumber.getRoundMethod();
-        String decimalPlaces = inputNumber.getDecimalPlaces();
-
-        String options = "";
-        options += decimalSeparator.isEmpty() ? "" : "aDec: '" + decimalSeparator + "',";
-        if (thousandSeparator != null) {
-            //empty thousandSeparator must be explicity defined.
-            options += thousandSeparator.isEmpty() ? "aSep:''," : "aSep: '" + thousandSeparator + "',";
-        }
-        options += symbol.isEmpty() ? "" : "aSign: '" + symbol + "',";
-        options += symbolPosition.isEmpty() ? "" : "pSign: '" + symbolPosition + "',";
-        options += minValue.isEmpty() ? "" : "vMin: '" + minValue + "',";
-        options += maxValue.isEmpty() ? "" : "vMax: '" + maxValue + "',";
-        options += roundMethod.isEmpty() ? "" : "mRound: '" + roundMethod + "',";
-        options += decimalPlaces.isEmpty() ? "" : "mDec: '" + decimalPlaces + "',";
+		writer.startElement("input", null);
+		writer.writeAttribute("id", clientId, null);
+		writer.writeAttribute("name", clientId, null);
+		writer.writeAttribute("type", "text", null);
 
 
-        //if all options are empty return empty
-        if (options.isEmpty()) {
-            return "";
-        }
+		renderPassThruAttributes(context, inputNumber, HTML.INPUT_TEXT_ATTRS);
 
-        //delete the last comma
-        int lastInd = options.length() - 1;
-        if (options.charAt(lastInd) == ',') {
-            options = options.substring(0, lastInd);
-        }
-        return "{" + options + "}";
+		if (inputNumber.isDisabled()) {
+			writer.writeAttribute("disabled", "disabled", "disabled");
+		}
+		if (inputNumber.isReadonly()) {
+			writer.writeAttribute("readonly", "readonly", "readonly");
+		}
+		if (inputNumber.getStyle() != null) {
+			writer.writeAttribute("style", inputNumber.getStyle(), "style");
+		}
 
-    }
+		writer.writeAttribute("class", defaultClass, "");
 
-    private String formatForPlugin(final String valueToRender) {
+		writer.endElement("input");
+	}
 
-        if (valueToRender == null || valueToRender.isEmpty()) {
-            LOGGER.warning("The value is null or empty. Default value 0.0 will be used.");
-            return "0.0";
-        } else {
+	protected void encodeScript(final FacesContext context, final InputNumber inputNumber) throws IOException {
+		ResponseWriter writer = context.getResponseWriter();
+		String clientId = inputNumber.getClientId(context);
+		startScript(writer, clientId);
+		String valueToRender = ComponentUtils.getValueToRender(context, inputNumber);
+		if (valueToRender == null) {
+			valueToRender = "";
+		}
 
-            try {
-                double doubleToRender = Double.parseDouble(valueToRender);
-                NumberFormat formatter = new DecimalFormat("#0.0#");
-                formatter.setRoundingMode(RoundingMode.FLOOR);
-                //autoNumeric jquery plugin max and min limits
-                formatter.setMinimumFractionDigits(10);
-                formatter.setMaximumFractionDigits(10);
-                formatter.setMaximumIntegerDigits(20);
-                String f = formatter.format(doubleToRender);
+		writer.write("$(function() {");
+		writer.write("PrimeFacesExt.cw('InputNumber','" + inputNumber.resolveWidgetVar() + "',{");
+		writer.write("id:'" + clientId + "'");
+		writer.write(",valueToRender:'" + formatForPlugin(valueToRender) + "'");
 
-                //force to english decimal separator
-                f = f.replace(',', '.');
-                return f;
-            } catch (Exception e) {                
-                throw new IllegalArgumentException(
-                        "Error converting  [" + valueToRender + "] to a double value;", e);
-            }
-        }
-    }
+		String metaOptions = getOptions(inputNumber);
+		if (!metaOptions.isEmpty()) {
+			writer.write(",pluginOptions:" + metaOptions);
+		}
+		encodeClientBehaviors(context, inputNumber);
+		writer.write("});});");
+
+		endScript(writer);
+	}
+
+	private String getOptions(final InputNumber inputNumber) {
+
+		String decimalSeparator = inputNumber.getDecimalSeparator();
+		String thousandSeparator = inputNumber.getThousandSeparator();
+		String symbol = inputNumber.getSymbol();
+		String symbolPosition = inputNumber.getSymbolPosition();
+		String minValue = inputNumber.getMinValue();
+		String maxValue = inputNumber.getMaxValue();
+		String roundMethod = inputNumber.getRoundMethod();
+		String decimalPlaces = inputNumber.getDecimalPlaces();
+
+		String options = "";
+		options += decimalSeparator.isEmpty() ? "" : "aDec: '" + decimalSeparator + "',";
+		if (thousandSeparator != null) {
+			//empty thousandSeparator must be explicity defined.
+			options += thousandSeparator.isEmpty() ? "aSep:''," : "aSep: '" + thousandSeparator + "',";
+		}
+		options += symbol.isEmpty() ? "" : "aSign: '" + symbol + "',";
+		options += symbolPosition.isEmpty() ? "" : "pSign: '" + symbolPosition + "',";
+		options += minValue.isEmpty() ? "" : "vMin: '" + minValue + "',";
+		options += maxValue.isEmpty() ? "" : "vMax: '" + maxValue + "',";
+		options += roundMethod.isEmpty() ? "" : "mRound: '" + roundMethod + "',";
+		options += decimalPlaces.isEmpty() ? "" : "mDec: '" + decimalPlaces + "',";
+
+
+		//if all options are empty return empty
+		if (options.isEmpty()) {
+			return "";
+		}
+
+		//delete the last comma
+		int lastInd = options.length() - 1;
+		if (options.charAt(lastInd) == ',') {
+			options = options.substring(0, lastInd);
+		}
+		return "{" + options + "}";
+
+	}
+
+	private String formatForPlugin(final String valueToRender) {
+
+		if (valueToRender == null || valueToRender.isEmpty()) {
+			LOGGER.warning("The value is null or empty. Default value 0.0 will be used.");
+			return "0.0";
+		} else {
+
+			try {
+				double doubleToRender = Double.parseDouble(valueToRender);
+				NumberFormat formatter = new DecimalFormat("#0.0#");
+				formatter.setRoundingMode(RoundingMode.FLOOR);
+				//autoNumeric jquery plugin max and min limits
+				formatter.setMinimumFractionDigits(10);
+				formatter.setMaximumFractionDigits(10);
+				formatter.setMaximumIntegerDigits(20);
+				String f = formatter.format(doubleToRender);
+
+				//force to english decimal separator
+				f = f.replace(',', '.');
+				return f;
+			} catch (Exception e) {
+				throw new IllegalArgumentException(
+						"Error converting  [" + valueToRender + "] to a double value;", e);
+			}
+		}
+	}
 }
